# fastapi-project

./: .gitignore  README.rst  pyproject.toml  requirements.txt
app/: exceptions.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: asset.py  authentication.py
app/core/: config.py  constants.py  errors.py  jwt.py  msg_91_util.py  read_file_util.py  s3_util.py  smtp_mail_util.py  utils.py
app/crud/: asset.py  shortcuts.py  user.py
app/db/: db_client.py  document.py  mongodb.py  mongodb_utils.py  redis.py  redis_utils.py
app/models/: dbmodel.py  rwmodel.py  user.py
env/: .dev.env  .docker.env  .pre.env
